--- a/ode_analyze.ipynb
+++ b/ode_analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "id": "9e4afa8b-4356-4f63-a1bd-b7f231e2dee1",
    "metadata": {},
    "outputs": [],
@@ -45,8 +45,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1ce2309-ae5a-46df-a34f-155712a392fd",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## ODE solver"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "c45d4f58-38a3-4eaf-abc1-44a54fc2a558",
    "metadata": {},
    "outputs": [],
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "id": "af67ac94-43bf-4a1e-8a19-47a161933254",
    "metadata": {},
    "outputs": [],
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "d78fbd62-6c0e-4631-8bc0-a572b4e15a11",
    "metadata": {},
    "outputs": [
@@ -85,7 +95,7 @@
        "Text(0.5, 0, 'time')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
